package com.batista.foodapp.model;

public interface Product {

    String getName();

    void setName(String name);

    int getAmount();

    void setAmount(int amount);
}
