package com.batista.foodapp.model.products;

public enum MeasurementUnit {
    GRAMS,
    KILOGRAMS,
    MILLILITERS,
    LITERS,
    PIECES,
    TABLESPOON,
    TEASPOONFUL
}
