@startuml

class RecipeProductImpl extends AbstractProduct implements RecipeProduct{
- Long id
- MeasurementUnit measurementUnit
- RecipeImpl recipe
}


class StepImpl implements Step{
- Long id
- int number
- String description
- RecipeImpl recipe
}


interface ShoppingListProduct {
~ boolean isPurchased()
}

interface Step {
}

interface Product {
}

interface Categories {
}

enum MeasurementUnit {
+  GRAMS
+  KILOGRAMS
+  MILLILITERS
+  LITERS
+  PIECES
+  TABLESPOON
+  TEASPOONFUL
}

interface Recipe {
}

class UserImpl implements User  {
- Long id
- String username
- String lastName
- Date birthDay
- ShoppingListImpl shoppingListImpl
- Set<RecipeImpl> recipesImpl
}


class ShoppingListProductImpl extends AbstractProduct implements ShoppingListProduct{
- Long id
- String shop
- String note
- boolean purchased
- ShoppingListImpl shoppingList
}


abstract class AbstractProduct implements Product{
- String name
- int amount
}


class ShoppingListImpl implements ShoppingList {
- Long id
- String name
- Set<ShoppingListProductImpl> products
- UserImpl userImpl
}


interface User {
}

interface ShoppingList {
}

class RecipeImpl implements Recipe {
- Long id
- String name
- Time time
- List<RecipeProductImpl> ingredients
- List<StepImpl> steps
- Set<CategoriesImpl> categories
- UserImpl userImpl
}


class CategoriesImpl implements Categories {
- Long id
- String name
- RecipeImpl recipe
}


interface RecipeProduct extends Product {
}

interface BasicCRUD extends JpaRepository {
    create
    update
    get
    getAll
    delete
}

interface CategoriesRespository extends BasicCRUD

interface ReicpeProductRepository extends BasicCRUD {
    duplicate
}

interface RecipeRepository extends BasicCRUD

interface ShoppingListRepository extends BasicCRUD

interface ShoppingListProductRepository extends BasicCRUD

interface StepRepository extends BasicCRUD

interface UserRepository extends BasicCRUD


ShoppingList "1" ..> "n" ShoppingListProduct

Recipe "1" --> "n" Step
Recipe  "1" ..> "n" RecipeProduct

Recipe "1" --> "n" Categories

User "1" --> "1" ShoppingList
User "1" --> "n" Recipe

RecipeProductImpl --> MeasurementUnit

hide empty members
@enduml